<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:paddingTop="16dp"
	android:paddingBottom="16dp"
    android:paddingLeft="2dp"
    android:paddingRight="2dp" >

    <TextView
        android:id="@+id/weekTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:text="@string/week_header" />

	<LinearLayout
	    android:id="@+id/daylintop"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/weekTitle"
	    android:orientation="horizontal"
	    android:paddingLeft="4dp"
	    android:weightSum="7" >
 
		<TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
			android:layout_weight="1"
            android:text="@string/sunday"/>
	    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
			android:layout_weight="1" 
			android:text="@string/monday" />
		<TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
			android:layout_weight="1" 
			android:text="@string/tuesday" />
		<TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
			android:layout_weight="1" 
			android:text="@string/wednesday" />
		<TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
			android:layout_weight="1" 
			android:text="@string/thursday" />
		<TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
			android:layout_weight="1" 
			android:text="@string/friday" />
		<TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
			android:layout_weight="1" 
			android:text="@string/saturday" />
	</LinearLayout>
	<LinearLayout
	    android:id="@+id/daylinbot"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/daylintop"
		android:weightSum="7"
		android:orientation="horizontal">
		<Spinner
            android:id="@+id/sunSpin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
		<Spinner
            android:id="@+id/monSpin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
		<Spinner
            android:id="@+id/tueSpin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
		<Spinner
            android:id="@+id/wedSpin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
		<Spinner
            android:id="@+id/thuSpin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
		<Spinner
            android:id="@+id/friSpin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
		<Spinner
            android:id="@+id/satSpin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
	</LinearLayout>
	<ToggleButton
	    android:id="@+id/four_but"
	    android:layout_below="@id/daylinbot"
	    android:layout_alignParentRight="true"
	    android:onClick="pushBootan"
	    android:textOn="@string/fourtens_but"
	    android:textOff="@string/fourtens_but"
	    android:layout_width="100dp"
	    android:layout_height="wrap_content" />
	<ToggleButton
	    android:id="@+id/night_but"
	    android:layout_below="@id/four_but"
	    android:layout_alignParentRight="true"
	    android:onClick="pushBootan"
	    android:textOn="@string/nights_but"
	    android:textOff="@string/nights_but"
	    android:layout_width="100dp"
	    android:layout_height="wrap_content" />
	<Spinner
	    android:id="@+id/meals_spin"
	    android:layout_below="@id/night_but"
	    android:layout_alignParentRight="true"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" />
	<Spinner
	    android:id="@+id/loa_spin"
	    android:layout_below="@id/meals_spin"
	    android:layout_alignParentRight="true"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" />
	<TextView
	    android:id="@+id/meal_text"
	    android:text="@string/meal_text"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toLeftOf="@id/meals_spin"
	    android:layout_below="@id/night_but" />
	<TextView
	    android:id="@+id/loa_text"
	    android:text="@string/loa_text"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toLeftOf="@id/loa_spin"
	    android:layout_below="@id/meals_spin" />
	<TextView
	    android:id="@+id/sing_val"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingRight="8dp"
	    android:layout_below="@id/daylinbot" />
	<TextView
	    android:id="@+id/half_val"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingRight="8dp"
	    android:layout_toRightOf="@id/sing_val"
	    android:layout_below="@id/daylinbot" />
	<TextView
	    android:id="@+id/doub_val"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@id/half_val"
	    android:layout_below="@id/daylinbot" />
	<TextView
	    android:id="@+id/gross_val"
	    android:textSize="20sp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/doub_val"/>
	<TextView
	    android:id="@+id/deduct_val"
	    android:textSize="20sp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/gross_val"/>
	<TextView
	    android:id="@+id/exempt_val"
	    android:textSize="20sp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/deduct_val"/>
	<TextView
	    android:id="@+id/net_val"
	    android:textSize="20sp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/exempt_val" 
	    android:paddingBottom="24dp" />
	<Button
	    android:id="@+id/clr_but"
	    android:text="@string/clr_but"
	    android:onClick="setClr"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/net_val"
	    android:layout_alignParentLeft="true" />
	<Button
	    android:id="@+id/tens_but"
	    android:text="@string/tens_but"
	    android:onClick="setTens"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/net_val"
	    android:layout_toRightOf="@id/clr_but" />
	<Button
	    android:id="@+id/twelves_but"
	    android:text="@string/twelves_but"
	    android:onClick="setTwelves"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/net_val"
	    android:layout_toRightOf="@id/tens_but" />
</RelativeLayout>
