<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:paddingLeft="12dp"
	android:paddingRight="12dp" >
	<TextView
		android:id="@+id/torque_title"
		android:text="@string/torqueInstruction"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true" >
	</TextView>
    <EditText
		android:id="@+id/studBox"
	    android:layout_width="120dp"
		android:layout_height="wrap_content"
		android:layout_below="@id/torque_title">
	</EditText>
	<Spinner
		android:id="@+id/patSpin"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/studBox" >
	</Spinner>
	<Button
		android:id="@+id/submit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/torque_title"
		android:layout_toRightOf="@id/studBox"
		android:text="@string/torque_but"
		android:onClick="submit" >
	</Button>
	<TextView
		android:id="@+id/torqueReturn"
		android:text="@string/torque_header"
		android:textSize="18dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/patSpin" >
	</TextView>
	
		
</RelativeLayout>
