<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_weight="0.3"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/sizeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/rateSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/middleContent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.7"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/leftColumn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="top"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/sDiamText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/sDiam_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/wrenchText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/wrench_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/driftText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/drift_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sCountText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/sCount_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sLengthText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/sLength_text"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rightColumn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >


        </LinearLayout>
    </LinearLayout>

</LinearLayout>